@@ -9,6 +9,7 @@ qbs (1.10.0+dfsg-1) UNRELEASED; urgency=medium
   * Export QBS_AUTOTEST_PROFILE=qbs_autotests when running the tests.
   * Build-depend on qtdeclarative5-private-dev, for Qt.quick module.
   * Update symbols files for the new release.
+  * Use dh_missing instead of deprecated dh_install --fail-missing.
 
  -- Dmitry Shachnev <mitya57@debian.org>  Tue, 12 Sep 2017 16:02:55 +0300
 
